<resources>
    <string name="app_name">Sloth</string>
    <string name="AddButton">Add</string>
    <string name="listTitle">Your Lists</string>
    <string name="todoTitle">Your To-Dos</string>
    <string name="Deadline">Deadline</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="yourtitle">Your Title</string>
    <string name="leafs">Leafs:</string>
    <string name="number">0/6</string>
    <string name="entertitle">Enter a Title</string>
    <string name="Zeit">Time</string>
    <string name="uhr">PM/AM</string>
    <string name="pfeil">Pfeil</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="deleted">List Deleted</string>
    <string name="updated">List Updated</string>
    <string name="exceeded">Exceeded Deadline</string>
    <string name="yourTodo">Your To-Do</string>
    <string name="rip">RIP</string>
    <string name="faultier_tot">Du hast nicht alle Punkte bis zur  Deadline erledigt. Dein Faultier ist  leider ohne genügend Blätter verhungert… Vielleicht motiviert dich das beim  nächsten Mal  nicht alles  aufzuschieben!</string>
    <string name="backToList">Back to List</string>
    <string name="total">/6</string>
    <string name="allCheckboxes">slothSleep</string>
    <string name="sleep">Z</string>
    <string name="allDone">Alles erledigt! Fauli das Faultier wird erstmal ein  Verdauungsschläfchen halten.  Das hast du dir jetzt auch verdient!</string>
    <string name="oneLeaf">Du hast Fauli dem Faultier ein  Blatt gefüttert.  Weiter so!</string>
    <string name="leaf">leaf</string>
    <string name="plusOne">+1</string>
    <string name="fillOut">Please fill out all todos and pick a date and time.</string>
</resources>
