<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ToDoActivity">

    <include
        android:id="@id/app_bar"
        layout="@layout/app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/enterTitle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/app_bar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_corners_white"
        android:ems="10"
        android:hint="@string/entertitle"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/blackText"
        android:textColorHint="@color/blackText" />

    <RelativeLayout
        android:id="@+id/relativelayoutDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterTitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corners_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterTitle">

        <ImageView
            android:id="@+id/calendar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/Date"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/kalender" />

        <Button
            android:id="@+id/date"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/calendar"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/Date"
            android:padding="10dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/whiteText"
            android:textColorHint="@color/whiteText" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativelayoutTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_corners_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterTitle">

        <ImageView
            android:id="@+id/clock"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/Date"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/uhr" />

        <Button
            android:id="@+id/time"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/clock"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/Zeit"
            android:padding="10dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/whiteText"
            android:textColorHint="@color/whiteText" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/checkboxLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativelayoutDate"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_list_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:context=".ToDoItem">

        <EditText
            android:id="@+id/todoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/checkbox"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-10dp"
            android:layout_marginTop="11dp"
            android:layout_toEndOf="@+id/checkbox"
            android:background="@color/whiteText"
            android:ems="10"
            android:hint="@string/yourTodo"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:button="@drawable/checkbox_leaf"
            android:padding="10dp" />

        <EditText
            android:id="@+id/todoText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/todoText"
            android:layout_alignBaseline="@+id/checkbox1"
            android:layout_marginStart="-10dp"
            android:layout_marginTop="9dp"
            android:layout_toEndOf="@+id/checkbox1"
            android:background="@color/whiteText"
            android:ems="10"
            android:hint="@string/yourTodo"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:button="@drawable/checkbox_leaf"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/checkbox" />

        <EditText
            android:id="@+id/todoText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/todoText1"
            android:layout_alignBaseline="@+id/checkbox2"
            android:layout_marginStart="-10dp"
            android:layout_marginTop="14dp"
            android:layout_toEndOf="@+id/checkbox2"
            android:background="@color/whiteText"
            android:ems="10"
            android:hint="@string/yourTodo"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:button="@drawable/checkbox_leaf"
            android:padding="10dp" />

        <EditText
            android:id="@+id/todoText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/todoText2"
            android:layout_alignBaseline="@+id/checkbox3"
            android:layout_marginStart="-10dp"
            android:layout_marginTop="14dp"
            android:layout_toEndOf="@+id/checkbox"
            android:background="@color/whiteText"
            android:ems="10"
            android:hint="@string/yourTodo"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:button="@drawable/checkbox_leaf"
            android:padding="10dp" />

        <EditText
            android:id="@+id/todoText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/todoText3"
            android:layout_alignBaseline="@+id/checkbox4"
            android:layout_marginStart="-10dp"
            android:layout_marginTop="13dp"
            android:layout_toEndOf="@+id/checkbox"
            android:background="@color/whiteText"
            android:ems="10"
            android:hint="@string/yourTodo"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <CheckBox
            android:id="@+id/checkbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox3"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:button="@drawable/checkbox_leaf"
            android:padding="10dp" />

        <EditText
            android:id="@+id/todoText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/todoText4"
            android:layout_alignBaseline="@+id/checkbox5"
            android:layout_marginStart="-10dp"
            android:layout_marginTop="14dp"
            android:layout_toEndOf="@+id/checkbox"
            android:background="@color/whiteText"
            android:ems="10"
            android:hint="@string/yourTodo"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <CheckBox
            android:id="@+id/checkbox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox4"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:button="@drawable/checkbox_leaf"
            android:padding="10dp" />

    </RelativeLayout>

</RelativeLayout>